<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PiezoSerial" Id="{04ed9258-9624-4f29-9f34-d3e5ff9995d6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PiezoSerial
VAR
	//PI Serial
	fbE621SerialDriver_M1K3 : FB_PI_E621_SerialDriver;
	rtInitParams_M1K3	:	R_TRIG;
	tonTimeoutRst_M1K3	: TON := (PT:=T#2S); //For timeout reset
	
	fbE621SerialDriver_M2K3 : FB_PI_E621_SerialDriver;
	rtInitParams_M2K3	:	R_TRIG;
	tonTimeoutRst_M2K3	: TON := (PT:=T#2S); //For timeout reset
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Piezo E-621
///////////////////////
fbE621SerialDriver_M1K3.i_xExecute := TRUE;
fbE621SerialDriver_M1K3.i_xExecute R= fbE621SerialDriver_M1K3.q_xDone;
fbE621SerialDriver_M1K3(iq_stPiezoAxis:= GVL_M1K3.M1K3_Pitch.Piezo,
		                iq_stSerialRXBuffer:= Serial_RXBuffer_M1K3,
		                iq_stSerialTXBuffer:= Serial_TXBuffer_M1K3);

fbE621SerialDriver_M2K3.i_xExecute := TRUE;
fbE621SerialDriver_M2K3.i_xExecute R= fbE621SerialDriver_M2K3.q_xDone;
fbE621SerialDriver_M2K3(iq_stPiezoAxis:= GVL_M2K3.M2K3_Pitch.Piezo,
		                iq_stSerialRXBuffer:= Serial_RXBuffer_M2K3,
		                iq_stSerialTXBuffer:= Serial_TXBuffer_M2K3);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>